syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.common";

package com.glance.spaces.common;

message CommonServerParams {

}